--- a/index.html
+++ b/index.html
@@ -1,26 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <h1 id="title">About Me</h1>
     </header>
     <main>
         <p class="para1">
-            i graduated from alwtany school at UAE , i did study there from grade 1 to grade 7, after that i moved to Al-Ahlya national school from grade 8 to grade 12 until i graduate with 81% average then i moved to jordan to complete my study
-            so i started my study as computer information system at the University Of jordan and finally graduated at 2019/6.
-            and now i started new cousre in programing which is my fav hobby, one of my goal is to work as developer and be pro with it.
+            i graduated from alwtany school at UAE , i did study there from grade 1 to grade 7, after that i moved to
+            Al-Ahlya national school from grade 8 to grade 12 until i graduate with 81% average then i moved to jordan
+            to complete my study
+            so i started my study as computer information system at the University Of jordan and finally graduated at
+            2019/6.
+            and now i started new cousre in programing which is my fav hobby, one of my goal is to work as developer and
+            be pro with it.
         </p>
+        <nav class="list">
+            <h1>Top Ten place's i recommend you to visit :-</h1>
+            <ol >
+                <li>Al-Quds</li>
+                <li>Yafa</li>
+                <li>Dubai</li>
+                <li>Abu Dubai</li>
+                <li>Petra</li>
+                <li>Mount Nebo</li>
+                <li>Al-Khazneh</li>
+                <li>Wadi rum</li>
+                <li>Aqaba</li>
+                <li>Dead sea</li>
+            </ol>
+        </nav>
+
+        <nav class="list1">
+            <h1 id="hwork">work experience and education summary</h1>
+            <ul>
+                <li>graduated from alwtany school at UAE</li>
+                <li>i did study there from grade 1 to grade 7</li>
+                <li>after that i moved to
+                    Al-Ahlya national school</li>
+                <li>from grade 8 to grade 12 until i graduate</li>
+                <li>with 81% average then i moved to jordan
+                    to complete my study</li>
+                <li>so i started my study as computer information system</li>
+                <li>at the University Of jordan</li>
+                <li>finally graduated at
+                    2019/6.</li>
+                <li>and now i started new cousre in programing which is my fav hobby</li>
+                <li>one of my goal is to work as developer and
+                    be pro with it</li>
+            </ul>
+
+        </nav>
     </main>
     <footer>
 
     </footer>
-    
+
     <script src="js/app.js"></script>
 </body>
+
 </html>
